[gd_scene load_steps=2 format=3 uid="uid://cyph3j5w8fk2d"]

[ext_resource type="Script" path="res://scripts/ui/inventory_ui.gd" id="1_inventory"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_inventory")

[node name="InventoryPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -240.0
offset_right = 350.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fish Collection"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="InventoryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Stats"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FishList" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="TotalValueLabel" type="Label" parent="InventoryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Total Value: 0 Gold"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="InventoryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Close (I)"
